# RobAir_Updated_2022

./: .gitignore  README.md
dataset/: CMakeLists.txt  package.xml
dataset/robair_maps/: map_1st.yaml  map_2nd.yaml  map_3rd.yaml
follow_me/: CMakeLists.txt  package.xml
follow_me/config/: rviz_config.rviz
follow_me/include/follow_me/: action.h  datmo.h  detect_legs.h  detect_moving_person.h  detection.h  obstacle_detection.h  rotation.h  simple_clustering.h  simple_motion_detection.h
follow_me/launch/: robair_lab2.launch
follow_me/src/: action.cpp  action_node.cpp  datmo.cpp  datmo_node.cpp  detect_legs.cpp  detect_moving_person.cpp  detection.cpp  detection_node.cpp  obstacle_detection.cpp  obstacle_detection_node.cpp  rotation.cpp  rotation_node.cpp  simple_clustering.cpp  simple_clutering.cpp  simple_motion_detection.cpp
gazebo_mimic/: CMakeLists.txt  package.xml
gazebo_mimic/launch/: gazebo.launch  rviz_robair.launch
localization/: CMakeLists.txt  package.xml
localization/config/: rviz_config.rviz  ufr_im2ag.yaml
localization/include/localization/: localization.h  sensor_model.h
localization/launch/: robair_lab3.launch
localization/src/: localization.cpp  localization_node.cpp  sensor_model.cpp  sensor_model_node.cpp
robair_control/: CMakeLists.txt  package.xml
robair_control/config/: control.yaml  gazebo_interface.yaml  localization.yaml  robair_controllers.yaml
robair_control/launch/: control.launch
robair_description/: CMakeLists.txt  database.config  model.config  package.xml
robair_description/launch/: load.launch
robair_description/urdf/: caster_wheel.urdf.xacro  hokuyo.urdf.xacro  robair.urdf  robair.urdf.xacro  simple.xacro  wheel.urdf.xacro  wheel_support.urdf.xacro
robair_gazebo/: CMakeLists.txt  package.xml
robair_gazebo/config/: gazebo_pid.yaml  model.config  rviz_config.rviz
robair_gazebo/launch/: robair_gazebo.launch
robair_gazebo/src/: OdometrySource.cpp
robair_hw_iface/: CMakeLists.txt  package.xml
robair_hw_iface/include/: robair_hw_iface.h
robair_hw_iface/launch/: hw_control.launch
robair_hw_iface/src/: robair_hw_iface.cpp
robair_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robair_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  robair.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
robair_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml  warehouse.launch
tutorial_ros/: CMakeLists.txt  package.xml
tutorial_ros/config/: rviz_config.rviz
tutorial_ros/include/tutorial_ros/: detect_motion.h  laser_graphical_display.h  laser_text_display.h  perform_clustering.h  robot_moving.h  rotation_done.h  utility.h
tutorial_ros/launch/: robair_lab1.launch  robair_test.launch
tutorial_ros/src/: detect_motion.cpp  detect_motion_node.cpp  laser_graphical_display.cpp  laser_graphical_display_node.cpp  laser_text_display.cpp  laser_text_display_node.cpp  perform_clustering.cpp  perform_clustering_node.cpp  robot_moving.cpp  robot_moving_node.cpp  rotation_done.cpp  rotation_done_node.cpp
