<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>dataset</name>
  <version>0.5.0</version>
  <description>
    ROBAIR Laser Scan Dataset.
  </description>
  <maintainer email="NoeBoulaye@todo.todo">Noe Boulaye</maintainer>
  <license>LGPLV3</license>
  <author>Olivier Aycard</author>

  <buildtool_depend>catkin</buildtool_depend>
    
</package>
