<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>robair_hw_iface</name>
  <version>0.0.0</version>
  <description>The  RobAir Hardware Interface package</description>

  <maintainer email="todo@todo.com">Somone</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>velocity_controllers</build_depend>
  <build_depend>diff_drive_controller</build_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <!-- Very important for this kind of robot!! -->
  <exec_depend>diff_drive_controller</exec_depend>

  <depend>roslaunch</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>genmsg</depend>
  <depend>tf</depend>

  <export>
  </export>
</package>