<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>tutorial_ros</name>
  <version>0.5.0</version>
  <description>
    ROBAIR Laser Scanner Tutorial.
  </description>
  <maintainer email="olivier@todo.todo">olivier</maintainer>
  <license>BSD-3-Clause</license>
  <author>Jon Tjerngren</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
</package>
